--- a/Sponsors.css
+++ b/Sponsors.css
@@ -36,7 +36,7 @@ body {
     background-color: white; 
     color: black;
     text-align: center;
-    font-family: Arail;
+    font-family: Arial;
     width: 31em;
 }
 
@@ -81,5 +81,17 @@ body {
     padding-top: .3em;
     padding-left: .3em;
     padding-right: .3em;
+    
+}
+
+.about{
+    background-color: white; 
+    color: black; 
+    padding-bottom: .5em;
+    padding-right: .5em;
+    padding-left: .5em;
+    padding-top: .5em;
+    text-align: center; 
+    font-size: 20px;
     
 }
