--- a/Sponsors.css
+++ b/Sponsors.css
@@ -7,7 +7,7 @@ body {
     line-height: 1.5em;
     color: white;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
-    background-image: url("http://files.vividscreen.info/soft/c29398cb6117f795fd64e6910abc0e29/Nike-1080x960.jpg");
+    background-image: url("/images/Nike.jpg");
     background-size:cover; 
 }
 
